--- a/src/pages/redir/ect/contact.astro
+++ b/src/pages/redir/ect/contact.astro
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<script is:inline>
-		window.location.href = `https://fedorporttest.netlify.app#contact`
+		window.location.href = `https://l0n3ly.com#contact`
 </script>
 </body>
 </html>
