--- a/src/pages/redir/ect/work.astro
+++ b/src/pages/redir/ect/work.astro
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<script is:inline>
-		window.location.href = `https://fedorporttest.netlify.app#work`
+		window.location.href = `https://l0n3ly.com#work`
 </script>
 </body>
 </html>
