Adjust front page contents

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -15,7 +15,7 @@ import '~/assets/styles/base.css';
 						<div class="flex w-auto">
 							<a
 								class="ring-0 text-mainYellow uppercase bg-[#7c1f1f] hover:bg-[#551515] active:bg-[#3a0e0e] rounded-2xl md:rounded-lg shadow-xl outline-dashed outline-[6px] outline-mainYellow w-full font-sans font-semibold text-center text-4xl axl:text-6xl sm:px-10 py-4 sm:py-5 axl:py-[7.5%] hover:scale-105 duration-200 ease-in-out"
-								href="#contact">let's chat</a>
+								href="#contact">let's get it done</a>
 						</div>
 					</div>
 				</div>
