--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -62,7 +62,7 @@ const image =
 		// site_name: 'SiteName',
 	}}
 	twitter={{
-		// handle: '@handle',
+		handle: '@LoadingL0n3ly',
 		// site: '@site',
 		cardType: image ? 'summary_large_image' : undefined,
 	}}
