--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,12 @@ import { SITE } from '~/config.mjs';
 import { getCanonical, getHomePermalink } from '~/utils/permalinks';
 import Layout from '~/layouts/PageLayout.astro';
 
-import Hero from '~/components/widgets/Hero.astro';
-import Experience from '~/components/widgets/Experience.astro';
-import Cards from '~/components/widgets/Cards.jsx';
-import Cs from '~/components/widgets/Carousel.jsx';
-import About from '~/components/widgets/About.astro';
-import Contact from '~/components/widgets/Contact.jsx';
+import Hero from '~/components/widgets/Hero.astro'; // Let's Talk 
+import Experience from '~/components/widgets/Experience.astro'; // Modals
+import Cards from '~/components/widgets/Cards.jsx'; 
+import Cs from '~/components/widgets/Carousel.jsx'; // Testimonial 
+import About from '~/components/widgets/About.astro'; // abour
+import Contact from '~/components/widgets/Contact.jsx'; 
 const meta = {
 	title: SITE.title,
 	description: SITE.description,
