--- a/src/pages/a.astro
+++ b/src/pages/a.astro
@@ -32,6 +32,7 @@ const caseStudy = {
 			alt: "C",
 		},
 	],
+	
 	bodyText: `lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quod. `, //use <br/> for line breaks
 }
 const meta = {
@@ -48,7 +49,7 @@ const meta = {
 		<p class="xl:max-w-[35%] text-2xl leading-6 pb-8">{caseStudy.mainImage.description}</p>
 		<div class="flex flex-col md:flex-row gap-y-4 gap-x-12">
 			{caseStudy.subImages.map((image) => (
-				<Image src={image.src} alt={image.alt} class="w-40 h-40 rounded-xl drop-shadow-lg"/>
+				<Image src={image.src} alt={image.alt} class="w-40 h-40 rounded-xl drop-shadow-lg"/> // awesome code
 			))}
 		</div>
 		<p class="xl:max-w-[45%] text-[1.6rem] leading-6 pt-6 xl:pt-12 pb-4">{caseStudy.bodyText}</p>
