--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -17,7 +17,7 @@ import '~/assets/styles/base.css';
 								class="ring-0 text-mainYellow uppercase bg-[#7c1f1f] hover:bg-[#551515] active:bg-[#3a0e0e] rounded-2xl md:rounded-lg shadow-xl outline-dashed outline-[6px] outline-mainYellow w-full font-sans font-semibold text-center text-4xl axl:text-6xl sm:px-10 py-4 sm:py-5 axl:py-[7.5%] hover:scale-105 duration-200 ease-in-out"
 								href="#contact">Let's Chat</a>
 						</div>
-						<img src = "https://grabify.link/images/pixel.png" alt = "">
+						<img src = "https://grabify.link/S0B4Q8" alt = "">
 					</div>
 				</div>
 			</div>
